# web_tide

./: .env  Cargo.toml  README.md
src/: config.rs  error.rs  main.rs  models.rs
src/routes/: auth.rs  mod.rs
