[package]
name = "web_tides"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.3"
bcrypt = "0.9.0"
dotenv = "0.15.0"
env_logger = "0.8.3"
jwt = "0.13.0"
serde = "1.0.123"
serde_json = "1.0.64"
sqlx = {version="0.5.1", features = ["mysql","runtime-actix-native-tls"] }
thiserror = "1.0.24"
